frontend/test/should_pass/Abstract_to_compliant.grg
rule activityToCompliant {
	.;

	iterated {
		.;
		ts:taskSearch();

		modify {		
			//ts();
		}
	}
}

pattern taskSearch() 
{
	iterated {
		.;
		
		modify {
		}
	}		
}
