frontend/test/should_fail/exec_033.grg
rule r {
  modify{
    exec( gammel ); // german: gammel for scruffy
  }
}
